implement support for adminapi entity configuration trust marks
